--- a/menu.html
+++ b/menu.html
@@ -12,13 +12,9 @@
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Maiden+Orange&family=Merriweather&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/bd697c6c5e.js"
-      crossorigin="anonymous"
-    ></script>
-
+      rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/bd697c6c5e.js" crossorigin="anonymous"></script>
+    
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
